2002-01-11  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs (Expression.MemberLookup): instead of taking a
	parameter `same_type' that was used to tell whether we could
	access private members we compute our containing type from the
	EmitContext.

	(FieldExpr): Added partial support for volatile fields.  This does
	not work for volatile fields exposed from assemblies, as I can not
	figure out how to extract the modreq from it.

	Updated all the source files to use this.

	* codegen.cs (EmitContext): Compute ContainerType ahead of time,
	because it is referenced by MemberLookup very often. 

2002-01-09  Ravi Pratap  <ravi@ximian.com>

	* typemanager.cs (IndexerPropertyName): If we have a TypeBuilder, use
	TypeBuilder.GetCustomAttributes to retrieve what we need.

	Get rid of redundant default_member_attr_type as this is the same as
	default_member_type which already exists.

	* interface.cs, attribute.cs : Update accordingly.
	
2002-01-08  Miguel de Icaza  <miguel@ximian.com>

	* typemanager.cs: Enable IndexerPropertyName again.  It does not
	work for TYpeBuilders though.  Ravi, can you please fix this?

	* cs-tokenizer.cs: Accept _ as a name in pp-expressions.

	* expression.cs (Argument.Emit): Handle the case of ref objects
	being passed to ref functions;  

	(ParameterReference.EmitLoad): Loads the content of the pointer
	without dereferencing.

2002-01-07  Miguel de Icaza  <miguel@ximian.com>

	* cs-tokenizer.cs: Implemented the pre-processing expressions.

2002-01-08  Ravi Pratap  <ravi@ximian.com>

	* class.cs (Indexer.DefineMethod): Incorporate the interface
	type in the name of the method if we are doing explicit interface
	implementation.

	* expression.cs (ConversionExists): Remove as it is completely obsolete.

	(BetterConversion): Fix extremely trivial bug where we were referring to
	ConversionExists instead of StandardConversionExists ! Hooray, things are fine
	again !

	* ../errors/bug16.cs : Add although we have fixed it.
